<resources>
    <string name="app_name">EkUmid</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="ratting">Ratting</string>
    <string name="distance_and_durarion">Distance and Durarion</string>
    <string name="address">Address</string>
    <string name="call_button_or_place_image">Call button or place image</string>
    <string name="list_item">List Item</string>
    <string name="number">Number</string>
    <string name="emergancy">Emergancy</string>
    <string name="emergency">emergency</string>
    <string name="offline">Offline</string>
</resources>
