<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:id="@+id/list_item"
    android:layout_height="wrap_content">



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<LinearLayout
    android:weightSum="1"
    android:paddingBottom="2dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_weight="0.80"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_Name"
            android:text="@string/name"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
        <TextView
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:text="@string/distance_and_durarion"
            android:textSize="20sp"
            android:id="@+id/tv_distance"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="20sp"
            android:id="@+id/tv_address"/>


        <TextView
            android:layout_marginLeft="15dp"
            android:id="@+id/tv_num"
            android:drawablePadding="25dp"
            android:singleLine="true"
            android:drawableLeft="@drawable/ic_local_phone_black_24dp"
            android:textSize="20sp"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number"/>


    </LinearLayout>
    <ImageView
        android:id="@+id/call"
        android:visibility="gone"
        android:layout_weight=".20"
        android:layout_width="150dp"
        android:layout_height="170dp"
        android:contentDescription="@string/call_button_or_place_image" />

</LinearLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>